--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -6,12 +6,24 @@ on:
     branches: [master]
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubntu-latest
+    env:
+      CI: true
+      MONGO_URL: mongodb://localhost/nasa
+    strategy:
+      matrix:
+        node-version: [16.x, 18.x]
+        mongodb-version: ["4.4"]
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js version 18
         uses: actions/setup-node@v2
         with:
-          node-version: "18"
+          node-version: ${{ matrix.node-version }}
+      - name: MongoDB in GitHub Actions
+        uses: supercharge/mongodb-github-action@1.9.0
+        with:
+          mongo-version: ${{matrix.mongodb-version}}
       - run: npm install
       - run: npm run build --prefix client
+      - run: npm test
